--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,13 +62,32 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: 0.05s;
+      transition-timing-function: cubic-bezier(0, 2.28, 0, 1.38);
     }
 
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand')
+    const hourHand = document.querySelector('.hour-hand');
+    const minuteHand = document.querySelector('.min-hand');
 
-
+    const setDate = () => {
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const minutes = now.getMinutes();
+      const hours = now.getHours();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      const minuteDegrees = ((minutes / 60) * 360) + 90;
+      const hoursDegrees = ((hours / 12) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      minuteHand.style.transform = `rotate(${minuteDegrees}deg)`
+      hourHand.style.transform = `rotate(${hoursDegrees}deg`; 
+    }
+    setInterval(setDate, 1000);
   </script>
 </body>
 </html>
